# dsa-with-c

./: .gitignore  CMakeLists.txt  README.md
include/: dynamicarray.h  hashtable.h  linkedlist.h  queue.h  queue_linkedlist.h  stack.h
include/basic_data_structures_h/: hashtable.h  linkedlist.h  queue.h  stack.h
include/search_algorithms/: binarysearch.h  linearsearch.h
include/sorting_algorithms/: bubblesort.h  heapsort.h  insertionsort.h  mergesort.h  quicksort.h  selectionsort.h
include/util_h/: util.h
src/: dynamicarray.c  hashtable.c  linkedlist.c  main.c  queue.c  queue_linkedlist.c  stack.c
src/basic_data_structures/: dynamicarray.c  queue.c  queue_linkedlist.c  stack.c
src/search_algorithms/: binarysearch.c  linearsearch.c
src/sorting_algorithms/: bubblesort.c  heapsort.c  insertionsort.c  mergesort.c  quicksort.c  selectionsort.c
src/util/: util.c
tests/: hashtable_test.c  linkedlist_test.c  queue_linkedlist_test.c  queue_test.c  sorting_test.c  stack_test.c
